# python-cqrs-pattern

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  perf-baseline.yml
backend/: .dockerignore  Dockerfile  config.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/routes/: employees.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/application/commands/: base.py  employees.py
backend/application/mediator/: behaviors.py  mediator.py  registry.py
backend/application/queries/: base.py  employees.py
backend/application/read_models/: __init__.py  employees.py  ttl_config.py
backend/application/read_models/projectors/: employees_projector.py
backend/domain/events/: __init__.py  base.py  employees.py  invalidation_service.py
backend/infrastructure/: __init__.py
backend/infrastructure/cache/: __init__.py  cache_provider.py  redis_cache_provider.py
backend/infrastructure/outbox/: outbox_processor.py  outbox_repository.py
backend/infrastructure/read_repository/: __init__.py  employees_read_repository.py
backend/tests/: test_employees.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
performance/: README.md
performance/scenarios/: monolith-mixed.js  monolith-read-heavy.js  monolith-write-heavy.js
scripts/: check-fix-quality-code.sh
